fix(StandingsFfa): Mobile overflow issue with round button

--- a/stylesheets/commons/Standings.less
+++ b/stylesheets/commons/Standings.less
@@ -10,4 +10,10 @@ div.standings-ffa {
 	& .btn-new {
 		width: 120%;
 	}
+
+	& > .tableHeaderRow {
+		display: flex;
+		gap: 32px;
+		align-items: center;
+	}
 }
